# mcp-on-the-flight

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: type_checking.yaml
data/resources/: companies.json
src/mcp_on_the_flight/: main.py  models.py  server.py  utils.py  websocket.py  workflow.py
tests/: test_extract_agent.py  test_llm_struct.py  test_models.py  test_qa_assistant.py  test_utils.py
tools/: create_extract_agent.py  create_llamacloud_index.py  create_llamacloud_index_sink.py
