[project]
name = "mcp-on-the-flight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.8.1",
  "llama-cloud-services>=0.6.34",
  "llama-index-core>=0.12.43",
  "llama-index-tools-mcp>=0.2.5",
  "pre-commit>=4.2.0"
]
